Changes to Version 2.1-4

  o The smoother functions loessLine, gamLine and quantregLine used in many car functions now evaluate the smoother at an equally spaced grid of points rather than at the observed values on the horizontal axis of a plot.
  
  o spreadLevelPlot.lm now accepts point marking as in most other graphical functions in car.
  
  o Bug fixed in one of the skewPower support functions; thans to Balazs Banfai
  
  o Added support for lmer objects in power transformations
  
  o Added support for skewPower family power transformations for lm and lmer objects
  
  o Added list, data.frame, and matrix methods for Boxplot(), suggestion of Michael Friendly
  
  o Added adaptiveKernel() density estimator, with option to use it in densityPlot().
  
Changes to Version 2.1-3

  o Corrected documentation for mcPlots
  
  o added id.location argument to showLabels to vary location of labels
  
  o added fix for compatiblity with Rcmdr with missing data in several plotting functions.
  
  o deltaMethod() now reports confidence intervals.
  
  o print.summary.Anova.mlm() has new SSP and SSPE arguments to determine whether the corresponding matrices are printed (suggestion of Michael Friendly).
  
  o summary() and print() methods for Anova.mlm() can now report univariate ANOVAs (suggestion and some code by Michael Friendly).
  
  o added "value" and "vcov" attributes to objects returned by linearHypothesis() (after suggestions by Liviu Andronic and Steven Yen).
  
  o compareCoefs() now checks classes of models. 
  
  o small fixes/changes.

Changes to Version 2.1-2

  o Modified scatter3d() so that plots can be embedded in HTML.

Changes to Version 2.1-1

  o influencePlot now returns Cook's distance, not its square root.
    
  o Anova() now supports "coxme" objects (produced by coxme() in coxme package) (request of Philipp Sprenger).
    